# lemmy-ui-leptos

./: .dockerignore  .gitignore  .leptosfmt.toml  .woodpecker.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  Trunk.toml  check_leptos_format.sh  dev.dockerfile  format.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  renovate.json  run.sh  settings.json  tailwind.config.js  test.dockerfile
.github/: CODEOWNERS
docker/: Dockerfile  ci.dockerfile  docker-compose.yml  lemmy.hjson  nginx.conf
docker/volumes/pictrs/sled-repo/v0.5.0/: db
end2end/: docker-compose.e2e.yml  docker-compose.yml  lemmy.hjson  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
end2end/tests/: common.ts  csr.spec.ts  example.spec.ts  hydrate.spec.ts  ssr.spec.ts
end2end/tests/desktop/: auth.spec.ts  navigation.spec.ts  theme.hydrate.spec.ts  theme.spec.ts
end2end/tests/mobile/: navigation.spec.ts
locales/: en.json  fr.json
locales/en/: main.ftl
scripts/: format.sh  run_e2e_tests.sh  run_end2end_tests.sh
src/: api.rs  api_service.rs  app.rs  config.rs  constants.rs  cookie.rs  cookie_middleware.rs  errors.rs  host.rs  layout.rs  lemmy_client.rs  lemmy_errors.rs  lib.rs  main.rs  server.rs  serverfns.rs  utils.rs
src/api/: comment.rs  login.rs  mod.rs  post.rs
src/contexts/: mod.rs  site_resource_context.rs  theme_resource_context.rs
src/queries/: comments_list_query.rs  communities_list_query.rs  mod.rs  post_query.rs  posts_list_query.rs  site_state_query.rs
src/resources/: mod.rs  site_resource.rs
src/routes/: home.rs  mod.rs  nav.rs
src/server/: api_service.rs  cookie_middleware.rs  mod.rs
src/serverfns/: auth.rs  block_user.rs  comments.rs  communities.rs  get_post.rs  get_site.rs  get_theme.rs  list_comments.rs  list_communities.rs  list_posts.rs  logout.rs  posts.rs  report_post.rs  save_post.rs  theme.rs  users.rs  vote_post.rs
src/serverfns/auth/: login.rs  logout.rs
src/serverfns/comments/: list_comments.rs  report_comment.rs
src/serverfns/communities/: create_community.rs  list_communities.rs
src/serverfns/posts/: get_post.rs  hide_post.rs  list_posts.rs  report_post.rs  save_post.rs  vote_post.rs
src/serverfns/theme/: get_theme.rs  set_theme.rs
src/serverfns/users/: block_user.rs
src/service/: api_service.rs  cookie_middleware.rs  mod.rs
src/ui/: components.rs  mod.rs
src/ui/components/: comment.rs  common.rs  communities.rs  home.rs  login.rs  mod.rs  modals.rs  post.rs  site_state_provider.rs
src/ui/components/comment/: comment_node.rs  comment_nodes.rs  mod.rs
src/ui/components/common/: community_listing.rs  content_actions.rs  counts_badge.rs  creator_listing.rs  fedilink.rs  filter_bar.rs  icon.rs  markdown_content.rs  mod.rs  nav.rs  password_input.rs  sidebar.rs  text_input.rs  time_since.rs  unpack.rs  vote_buttons.rs  with_filter_bar.rs
src/ui/components/common/content_actions/: comment_count.rs  hide_post_button.rs  mod.rs  post_content_actions.rs  report_button.rs
src/ui/components/common/filter_bar/: listing_type_link.rs  sort_type_link.rs
src/ui/components/common/sidebar/: sidebar_data.rs  site_sidebar.rs  team_member_card.rs  user_stat_row.rs
src/ui/components/common/vote_buttons/: comment_vote_buttons.rs  mod.rs  post_vote_buttons.rs  vote_button.rs
src/ui/components/communities/: communities_activity.rs  communities_page.rs  community_form.rs  create_community_page.rs  mod.rs
src/ui/components/home/: home_activity.rs  home_page.rs  mod.rs  site_summary.rs  trending.rs
src/ui/components/layouts/: base_layout.rs  filter_bar_layout.rs
src/ui/components/layouts/base_layout/: bottom_nav.rs  mobile_nav.rs  side_nav.rs  top_nav.rs
src/ui/components/layouts/base_layout/top_nav/: auth_dropdown.rs  notification_bell.rs  theme_select.rs
src/ui/components/layouts/filter_bar_layout/: filter_bar.rs  listing_type_link.rs  sort_type_link.rs
src/ui/components/login/: login_activity.rs  login_form.rs  login_page.rs  mod.rs
src/ui/components/modals/: report_modal.rs
src/ui/components/post/: comments_section.rs  mod.rs  post_activity.rs  post_listing.rs  post_listings.rs  post_page.rs
src/ui/components/post/post_listing/: thumbnail.rs
src/ui/components/post/post_listing/thumbnail/: thumbnail_inner.rs
src/ui/contexts/: site_context.rs
src/ui/layouts/: base_layout.rs  filter_bar_layout.rs  mod.rs
src/utils/: apub_name.rs  build_comment_tree.rs  derive_query_param_type.rs  derive_query_signal.rs  derive_user_is_logged_in.rs  derive_user_is_logged_in_signal.rs  filetype.rs  format.rs  format_number_si.rs  get_client_and_session.rs  get_time_since.rs  markdown.rs  mod.rs  traits.rs  types.rs
src/utils/traits/: bool_option_str.rs  to_str.rs
src/utils/types/: comment_tree.rs  content_action_types.rs  dialog_types.rs  server_action.rs  stores.rs  theme.rs
src/utils/types/stores/: comment_store.rs
style/: tailwind.css
