[package]
name = "lemmy-ui-leptos"
version = "0.0.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6.13" }
leptos_meta = { version = "0.6.13" }
leptos_router = { version = "0.6.13" }
leptos_i18n = "0.3.3"
cfg-if = "1.0.0"
lemmy-client = { version = "1.0.2", features = ["leptos"] }
serde = "1.0.204"
serde_json = "1.0.120"
js-sys = { version = "0.3.69", optional = true }

# required for better debug messages
console_error_panic_hook = { version = "0.1.7", optional = true }

# dependecies for server (enable when ssr set)
leptos_actix = { version = "0.6.13", optional = true }
actix-files = { version = "0.6.6", optional = true }
actix-web = { version = "4.8.0", features = ["macros"], optional = true }
actix-session = { version = "0.9.0", features = [
  "cookie-session",
], optional = true }
tokio = { version = "1.39.1", optional = true, features = ["macros"] }
strum = { version = "0.26.3", features = ["derive"] }
trait-set = "0.3.0"
leptos-use = "0.10.10"
si_format = "0.1.1"
tailwind_fuse = { version = "0.3.1", features = ["variant"] }
regex = { version = "1.10.5", optional = true }

[package.metadata.leptos-i18n]
default = "en"
locales = ["en"]

[features]
default = ["ssr"]
hydrate = [
  "leptos/hydrate",
  "leptos_meta/hydrate",
  "leptos_router/hydrate",
  "leptos_i18n/hydrate",
  "dep:console_error_panic_hook",
  "dep:js-sys",
]
csr = [
  "leptos/csr",
  "leptos_meta/csr",
  "leptos_router/csr",
  "leptos_i18n/csr",
  "dep:console_error_panic_hook",
  "dep:js-sys",
]
ssr = [
  "leptos/ssr",
  "leptos_i18n/actix",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:leptos_actix",
  "dep:actix-web",
  "dep:actix-files",
  "dep:actix-session",
  "dep:tokio",
  "dep:regex",
]

[package.metadata.cargo-all-features]
denylist = ["actix-files", "actix-web", "leptos_actix"]
skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"]]

[profile.release]
codegen-units = 1
lto = true

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1

[package.metadata.leptos]
output-name = "lemmy-ui-leptos"
env = "DEV"
watch = false

bin-features = ["ssr"]
bin-default-features = false

lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"

tailwind-input-file = "style/tailwind.css"
browserquery = "defaults"

site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"
site-addr = "0.0.0.0:1237"
reload-port = 3001

end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
