[package]
name = "lemmy-ui-leptos"
version = "0.0.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6" }
leptos_meta = { version = "0.6" }
leptos_router = { version = "0.6" }
cfg-if = "1"
lemmy-client = { version = "1.0.2", features = ["leptos"] }
serde = "1.0"
serde_json = "1.0"

# required for better debug messages
console_error_panic_hook = { version = "0.1", optional = true }

# dependecies for server (enable when ssr set)
leptos_actix = { version = "0.6", optional = true }
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4.9", features = ["macros"], optional = true }
actix-session = { version = "0.10", features = [
  "cookie-session",
], optional = true }
tokio = { version = "1.39", optional = true, features = ["macros"] }
strum = { version = "0.26", features = ["derive"] }
trait-set = "0.3"
leptos-use = "0.13"
pretty-num = "0.1"
tailwind_fuse = { version = "0.3", features = ["variant"] }
web-sys = { version = "0.3", optional = true, features = ["Url"] }
leptos-fluent = { version = "0.1", features = ["actix"] }
fluent-templates = "0.10"
chrono = "0.4.38"

[features]
default = ["ssr"]
hydrate = [
  "leptos/hydrate",
  "leptos_meta/hydrate",
  "leptos_router/hydrate",
  "leptos-fluent/hydrate",
  "dep:console_error_panic_hook",
  "dep:web-sys",
]
csr = [
  "leptos/csr",
  "leptos_meta/csr",
  "leptos_router/csr",
  "dep:console_error_panic_hook",
  "dep:web-sys",
]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos-fluent/ssr",
  "leptos-fluent/actix",
  "dep:leptos_actix",
  "dep:actix-web",
  "dep:actix-files",
  "dep:actix-session",
  "dep:tokio",
]

[lints.clippy]
# leptos can't deal with these lints
needless_lifetimes = "allow"
let_unit_value = "allow"

[package.metadata.cargo-all-features]
denylist = ["actix-files", "actix-web", "leptos_actix"]
skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"]]

[profile.release]
codegen-units = 1
lto = true

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1

[dev-dependencies]
rstest = "0.22.0"

[package.metadata.leptos]
output-name = "lemmy-ui-leptos"
env = "DEV"
watch = false
watch-additional-files = ["locales"]

bin-features = ["ssr"]
bin-default-features = false

lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"

tailwind-input-file = "style/tailwind.css"
browserquery = "defaults"

site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"
site-addr = "0.0.0.0:1237"
reload-port = 3001

end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
