[package]
name = "lemmy-ui-leptos"
version = "0.0.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = "0.7"
leptos_meta = "0.7"
leptos_router = "0.7"
cfg-if = "1"
lemmy-client = "1.0.5"
serde = "1.0"

# required for better debug messages
console_error_panic_hook = { version = "0.1", optional = true }

# dependecies for server (enable when ssr set)
leptos_actix = { version = "0.7", optional = true }
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4.10", features = ["macros"], optional = true }
actix-session = { version = "0.10", features = [
  "cookie-session",
], optional = true }
tokio = { version = "1.44", optional = true, features = ["macros"] }
strum = { version = "0.27", features = ["derive"] }
leptos-use = "0.15"
pretty-num = "0.1"
tailwind_fuse = { version = "0.3", features = ["variant"] }
web-sys = { version = "0.3", optional = true, features = ["Url"] }
wasm-bindgen = { version = "0.2", optional = true }
leptos-fluent = { version = "0.2", features = ["actix"] }
fluent-templates = "0.13"
chrono = "0.4"
markdown-it = "0.6"
markdown-it-sup = "1"
markdown-it-sub = "1"
markdown-it-ruby = "1"
markdown-it-block-spoiler = "1"
markdown-it-footnote = "0.2"

uuid = "=1.12.1"

[package.metadata.cargo-shear]
ignored = ["uuid"]

[features]
default = ["ssr"]
hydrate = [
  "leptos/hydrate",
  "leptos-fluent/hydrate",
  "dep:console_error_panic_hook",
  "dep:web-sys",
  "dep:wasm-bindgen",
]
csr = [
  "leptos/csr",
  "dep:console_error_panic_hook",
  "dep:web-sys",
  "dep:wasm-bindgen",
]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos-fluent/ssr",
  "leptos-fluent/actix",
  "dep:leptos_actix",
  "dep:actix-web",
  "dep:actix-files",
  "dep:actix-session",
  "dep:tokio",
]

[lints.clippy]
# leptos can't deal with these lints
needless_lifetimes = "allow"
let_unit_value = "allow"

[package.metadata.cargo-all-features]
denylist = [
  "actix-files",
  "actix-web",
  "leptos_actix",
  "console_error_panic_hook",
  "wasm-bindgen",
  "web-sys",
]
skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"]]

[profile.release]
codegen-units = 1
lto = true

[profile.wasm-release]
inherits = "release"
opt-level = "z"
panic = "abort"

[dev-dependencies]
rstest = "0.25"

[package.metadata.leptos]
output-name = "lemmy-ui-leptos"
env = "DEV"
watch = false
watch-additional-files = ["locales"]

bin-features = ["ssr"]
bin-default-features = false

lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"

tailwind-input-file = "style/tailwind.css"
browserquery = "defaults"

site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"
site-addr = "127.0.0.1:1237"
reload-port = 3001

end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
